# untidy

./: README.md  pyproject.toml  untidy_solo.py
src/untidy/: cli.py  git_scanner.py  models.py  report.py  scanner.py
src/untidy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/untidy/detectors/: base.py  checksums.py  headers.py  patterns.py
src/untidy/readers/: base.py  csv_reader.py  docx_reader.py  excel_reader.py  json_reader.py  pdf_reader.py  sql_reader.py  text_reader.py
tests/: conftest.py  test_cli.py  test_detectors.py  test_dual_output.py  test_git_scanner.py  test_new_detectors.py  test_new_readers.py  test_readers.py  test_scanner.py  test_strict_flag.py
tests/fixtures/: benign.csv  patients.csv  queries.sql
