[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "untidy"
version = "0.1.0"
description = "Offline CLI that scans files for sensitive data."
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "pdfminer.six>=20221105",
    "python-docx>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
untidy = "untidy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
